# fastembed-vectorstore

./: .gitignore  Cargo.toml  README.md  fastembed_vectorstore.pyi  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
fastembed_vectorstore/: __init__.py
src/: lib.rs  vector_store.rs
tests/: test_vectorstore.py
