[package]
name = "fastembed-vectorstore"
version = "0.5.1"
edition = "2021"

[lib]
name = "fastembed_vectorstore"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.27.0"
features = ["abi3-py38"]

[dependencies]
fastembed = { version = "5.8.0", default-features = false, features = [
  "hf-hub-rustls-tls",
  "ort-download-binaries",
] }
serde_json = "1.0.140"
num_cpus = "1.16.0"