[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastembed_vectorstore"
version = "0.5.1"
description = "In-memory vector store with fastembed"
authors = [{ name = "sauravniraula", email = "developmentsaurav@gmail.com" }]
readme = "README.md"
license = "Apache-2.0"
keywords = ["fastembed", "vectorstore", "python", "embedding", "vector database", "similarity search"]
requires-python = ">=3.8"
dependencies = ["fastembed", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Repository = "https://github.com/sauravniraula/fastembed_vectorstore"
Issues = "https://github.com/sauravniraula/fastembed_vectorstore/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastembed_vectorstore*"]

[tool.setuptools.package-data]
fastembed_vectorstore = ["py.typed"]